resolved issue with pathing and css not showing correctly

--- a/src/pages/Login.css
+++ b/src/pages/Login.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url("/src/lines.png");
+    background-image: url("/src/resources/lines.png");
     background-size: 80px 80px;
     margin-left: 5vw;
     margin-right: 5vw;
